--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Document</title>
   </head>
   <body>
-    <section>Hello World!</section>
+    <h1>Welcome to git</h1>
   </body>
 </html>
