--- a/aboutus.html
+++ b/aboutus.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <h1>This is about us page</h1>
+    <footer>
+      <h1>Link of social medias</h1>
+    </footer>
   </body>
 </html>
